Thu Dec  3 23:57:13 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/config/dcpsexe_with_multicast.mpb:

          Added additional MPC base project.

Thu Dec  3 23:54:56 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.h:
        * tools/odds_monitor/MonitorData.cpp:
        * tools/odds_monitor/MonitorDataStorage.inl:
        * tools/odds_monitor/Monitor_main.cpp:
        * tools/odds_monitor/monitor.conf:

          Updated to publish instrumentation topics from the application
          for testing.  Removed stub data since we are now receiving
          real instrumentation data (and even displaying some of it).

Thu Dec  3 23:49:54 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Updated error logging for expired NAK requests.

Thu Dec  3 22:23:05 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.h:
        * tools/odds_monitor/MonitorData.cpp:
        * tools/odds_monitor/MonitorDataModel.h:
        * tools/odds_monitor/MonitorDataModel.cpp:
        * tools/odds_monitor/MonitorDataStorage.h:
        * tools/odds_monitor/MonitorDataStorage.inl:
        * tools/odds_monitor/MonitorDataStorage.cpp:
        * tools/odds_monitor/MonitorTask.cpp:

          Initial ServiceParticipantReport handling complete except for
          Name/Value pair data.

Thu Dec  3 17:04:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendBuffer.h:
        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Fixed circular dependencies; fixed interface lead caused by
          TransportSendStrategy.

Thu Dec  3 16:37:41 UTC 2009  Steven Stallion  <stallions@ociweb.com>
