@@ -11,12 +11,18 @@ namespace OpenDDS {
 namespace DCPS {
 
 ACE_INLINE
-DisjointSequence::range_iterator::range_iterator(set_type::iterator pos)
-  : pos_(pos)
+DisjointSequence::range_iterator::range_iterator()
+{
+}
+
+ACE_INLINE
+DisjointSequence::range_iterator::range_iterator(set_type::iterator begin,
+                                                 set_type::iterator end)
+  : pos_(begin),
+    end_(end)
 {
   // N.B. range_iterators always look ahead; the iterator must be
-  // incremented to properly initialize state. This is safe as we
-  // are guaranteed to have at least one element in the set:
+  // incremented to properly initialize state:
   ++*this;
 }
 
@@ -24,15 +30,19 @@ ACE_INLINE
 DisjointSequence::range_iterator::range_iterator(const range_iterator& it)
 {
   this->pos_ = it.pos_;
+  this->end_ = it.end_;
   this->value_ = it.value_;
 }
 
 ACE_INLINE DisjointSequence::range_iterator&
 DisjointSequence::range_iterator::operator++()
 {
-  set_type::iterator prev(this->pos_++);
-  this->value_ = range_type(SequenceNumber(prev->value_ + 1),
-                            SequenceNumber(this->pos_->value_ - 1));
+  if (this->pos_ != this->end_) {
+    set_type::iterator prev(this->pos_++);
+
+    this->value_ = range_type(SequenceNumber(prev->value_ + 1),
+                              SequenceNumber(this->pos_->value_ - 1));
+  }
   return *this;
 }
 
@@ -73,13 +83,15 @@ DisjointSequence::range_iterator::operator->()
 ACE_INLINE DisjointSequence::range_iterator
 DisjointSequence::range_begin()
 {
-  return range_iterator(this->values_.begin());
+  return range_iterator(this->values_.begin(),
+                        this->values_.end());
 }
 
 ACE_INLINE DisjointSequence::range_iterator
 DisjointSequence::range_end()
 {
-  return range_iterator(this->values_.end());
+  return range_iterator(this->values_.end(),
+                        this->values_.end());
 }
 
 ACE_INLINE SequenceNumber
